Add tests for controller and service